included variables, assignments and statement lists

--- a/calculator.html
+++ b/calculator.html
@@ -12,7 +12,8 @@
       <script src="calculator.js"></script>
       <script src="main.js"></script>
       <p>
-        <input id="input" type="text" value="PI*4^2 + 5" /> <button id="compute">equals</button> 
+        <textarea id="input" autofocus cols = "80" rows = "5"></textarea> 
+        <button id="eval" type="button">eval</button><br>
         <span id="output"></span> <!-- Output goes here! -->
       </p>
     </div>
