moving tests to directory test/

--- a/test/test.html
+++ b/test/test.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Testing Our Simple Calculator</title>
     <link rel="stylesheet" href="test.css" />
-    <script type="text/javascript" src="jquery/jquery.js"></script> 
-    <script type="text/javascript" src="calculator.js"></script>
+    <script type="text/javascript" src="../calculator.js"></script>
 
   </head>
   <body>
