--- a/calculator.html
+++ b/calculator.html
@@ -8,7 +8,8 @@
   <body>
     <h1>Calculator demo</h1>
     <div id="content">
-      <script src="jquery/jquery.js"></script> 
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
       <script src="calculator.js"></script>
       <script src="main.js"></script>
       <p>
